Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/generic_events_l_english.properties
+++ b/ko/generic_events_l_english.properties
@@ -54,9 +54,9 @@ institution_events.200.d코0=14세기 이래로 이탈리아의 부유하고 강
 institution_events.201.d코0=여행자들이 먼 땅에서 오래된 이념의 위대한 재탄생을 떠들고 있습니다. 이 '르네상스'의 지식인들에 의해 엄청난 비밀들이 드러나고 있다는 보고가 올라오고 있지만 이러한 소문들을 모두 믿기는 다소 어려워 보입니다.
 institution_events.3.t코0=식민주의의 탄생
 institution_events.3.d코1=신대륙의 발견은 식민지 개척자들과 원주민들에게 새로운 시대를 열어주었을 뿐만 아니라 물질과 기술, 그리고 지구의 거대함에 대한 깨달음까지 널리 퍼뜨렸습니다. 동물, 농작물, 은, 질병들이 대서양을 건너옴에 따라 진정한 세계 경제를 향한 첫 발걸음을 내딛었습니다. 낯선 땅이 지도에 그려지고, 낯선 사람들이 문서에 남기 시작하면서, 종교적이거나 철학적인 논쟁들을 넘어서 사람들의 생각들까지 바다 건너 사회의 것들에 의해 물들어 갔습니다. 위대한 지성인들은 한때 진실이었던 것이 무엇이었는지에 대해 되묻고 있으며, [institution_origin.GetCapitalName]부터 인도의 파테푸르 시크리까지 세상의 본질에 대한 논쟁은 현재진행형입니다.
-
-
-
+institution_events.3.da코2=[institution_origin.Owner.GetName]의 신대륙 발견은 식민지 개척자들과 원주민들 뿐만 아니라 구대륙과 신대륙을 포함한 전 세계에 새로운 시대를 열어주었습니다. 구대륙과 신대륙의 만남은 자원과 기술 진보의 확산을 이끌었으며 우리 세상이 정말로 광활하다는 것에 대한 계몽적인 인식으로 이어졌습니다. 동물, 농작물, 은, 질병들이 대서양을 건너옴에 따라 [institution_origin.Owner.GetName]의 [institution_origin.Owner.GovernmentName](은)는 진정한 세계 경제의 본보기가 되었습니다. 아시아 전역과 그 너머의, 귀족들과 세속 행정가들은 신대륙의 영토가 자신들의 국가 행정에 어떻게 통합될 수 있는지 그리고 어떻게 해야 신대륙의 원주민들을 [institution_origin.Owner.Religion.GetName] 철학으로 계몽시킬 수 있는지에 대해 토론하기 시작하고 있습니다. 이제 세계의 미래는 [institution_origin.GetCapitalName]에서 세우타까지 모든 곳에서 논쟁의 대상이 되었습니다.
+institution_events.3.dc코2=[institution_origin.Owner.GetName]의 신대륙 발견은 식민지 개척자들과 원주민들 뿐만 아니라 구대륙과 신대륙을 포함한 전 세계에 새로운 시대를 열어주었습니다. 구대륙과 신대륙의 만남은 자원과 기술 진보의 확산을 이끌었으며 우리 세상이 정말로 광활하다는 것에 대한 계몽적인 인식으로 이어졌습니다. 동물, 농작물, 은, 질병들이 대서양을 건너옴에 따라 [institution_origin.Owner.GetName]의 [institution_origin.Owner.GovernmentName](은)는 진정한 세계 경제의 본보기가 되었습니다. 이미, 유교 관료들은 신대륙의 영토를 어떻게 아주 오래된 [institution_origin.Owner.GetAdjective] 정부에 잘 통합시킬 수 있을지 그리고 정확히 어떻게 해야 원주민의 문화와 종교적 관행이 자신들의 국가에 통합시킬 수 있을지 논쟁하고 있습니다. 이제 세계의 미래는 [institution_origin.GetCapitalName]에서 세우타까지 모든 곳에서 논쟁의 대상이 되었습니다.
+institution_events.3.djap1코2=[institution_origin.Owner.GetName]의 신대륙 발견은 식민지 개척자들과 원주민들 뿐만 아니라 구대륙과 신대륙을 포함한 전 세계에 새로운 시대를 열어주었습니다. 구대륙과 신대륙의 만남은 자원과 기술 진보의 확산을 이끌었으며 우리 세상이 정말로 광활하다는 것에 대한 계몽적인 인식으로 이어졌습니다. 동물, 농작물, 은, 질병들이 대서양을 건너옴에 따라 [institution_origin.Owner.GetName]의 [institution_origin.Owner.GovernmentName](은)는 진정한 세계 경제의 본보기가 되었습니다. 이미 [institution_origin.Owner.GetAdjective] [institution_origin.Owner.GovernmentName]의 관리들은 황제의 이름으로 신대륙을 주장하기 위해 신대륙의 지도를 만들고 있으며, 신대륙의 낯선 지역민들을 문서화하고 있고 어떻게 해야 그들의 정신적, 문화적 관행이 [institution_origin.Owner.Monarch.GetTitle]에게 가장 잘 봉사할 수 있을지에 대해 논쟁하고 있습니다. 이제 세계의 미래는 [institution_origin.GetCapitalName]에서 세우타까지 모든 곳에서 논쟁의 대상이 되었습니다.
 
 
 institution_events.3.a코0=이것으로 모든 것이 바뀔 것이다...
