--- a/ko/emperor_content_l_english.properties
+++ b/ko/emperor_content_l_english.properties
@@ -1811,7 +1811,13 @@ SNA_ideas_bonus코0=소노란 야망
 VRM_ideas코0=버몬트 이념
 VRM_ideas_start코0=버몬트 전통
 VRM_ideas_bonus코0=버몬트 야망
+clerical_poverty_aspect코0=성직자의 청빈함
+desc_clerical_poverty_aspect코0=성직자는 재물을 소유하지 않아야 하며 물질적인 소유를 포기해야 합니다. 그들은 세속적인 세상이 아니라 주님께 주의를 기울여야 합니다.
 bread_and_wine_aspect코0=빵과 와인
+desc_bread_and_wine_aspect코0=우트라크파와 가톨릭 교회 사이의 주요한 교리 차이는 양형 영성체의 개념입니다. 후스파 종파들은 빵과 와인 둘을 포함하는 영성체만이 허용되며, 이는 평신도들에게도 마찬가지라고 믿습니다.
+sola_scriptura_aspect코0=오직 성경(Sola Scriptura)
+desc_sola_scriptura_aspect코0=주님의 말씀을 사람들에게 전달하는, 성경은 기독교 교리에서 독보적인 권위를 가지고 있습니다. 성경에 의해 뒷받침될 수 없는 모든 종교적 관습은 이단으로 비난되어야 합니다.
+adamite_services_aspect코0=아담파식 예배
 flavor_boh.12.t코0=바젤 협약
 flavor_boh.12.d코1=후스 전쟁은 후스파의 온건파인 우트라파와 가톨릭 교회 사이의 종교적 평화로 종결되었습니다. 지금까지 협약은 존중되었고 평화가 보헤미아에 돌아왔습니다. 하지만 후스파와의 긴장은 사라지지 않았습니다. 후스의 추종자들은 민중들과 귀족들 사이에 수가 많습니다. 어쩌면 그들이 다시 한번 무기를 들기 전에 이 이단을 뿌리뽑아야 할지도 모릅니다.
 flavor_boh.12.a코0=협약을 존중한다.
