Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/flavor_events_l_english.properties
+++ b/ko/flavor_events_l_english.properties
@@ -1795,7 +1795,7 @@ flavor_fra.EVTOPTA3145코0=혁명의 적을 처단하라!
 flavor_fra.EVTOPTB3145코0=관용을 보여라
 flavor_fra.EVTNAME3781코1=공포의 끝
 
-
+flavor_fra.EVTOPTA3781코1=칼로 흥한 자는 칼로 망한다.
 flavor_fra.EVTNAME3146코1=국왕의 운명
 flavor_fra.EVTDESC3146코0=1791년 6월 20일 왕족들의 도주가 실패하면서 그들은 가택 연금에 처해졌다. 공포 정치가 시작되었을 때 귀족들은 처형되었고 왕은 국외 세력과의 공모 혐의를 받아 반역자로 낙인 찍혔다. 국왕은 처음에는 퇴위하도록 강요받고 수감되어 '시민 카페(Citizen Capet)'로 불렸다. 1793년 1월 15일 국민 공회는 국왕의 처형에 대한 의제를 찬성 361표, 반대 360표로 표결하였다. 1793년 1월 21일 국왕 루이는 참수되었다.
 flavor_fra.EVTOPTA3146코0=처형에 찬성 361표, 반대 360표
@@ -2796,8 +2796,8 @@ flavor_pol.EVTNAME11코0=산도미어슈 로코슈(Sandomierz Rokosz)
 
 flavor_pol.EVTOPTA11코0=반군 지도자들과 협의하라
 flavor_pol.EVTOPTB11코0=반군을 진압하라
-
-
+flavor_pol.EVTNAME12코1=세임 진압
+flavor_pol.EVTDESC12코1=슐라흐타의 반란은 끝났습니다! 귀족들의 요구를 받아들이는 것에 대한 [Root.Monarch.GetName]의 반대 뿐만 아니라 반란 봉기에 대한 [Root.Monarch.GetHerHis] 승리는 왕실의 확실한 승리를 낳았습니다. 슐라흐타는 자신들의 범죄에 대한 관대한 처벌을 대가로 항복했으며 [Root.Monarch.GetName](은)는 정부를 진정으 장악해, 처음으로 [Root.GetName]에 세습 절대 군주정을 확립했습니다.
 flavor_pol.EVTOPTA12코1=귀족들은 공식적으로 항복했다.
 flavor_pol.20.t코0=폴란드의 선거 군주제
 flavor_pol.20.d코0=1370년 피아스트 왕조의 마지막 왕이 죽으면서, 폴란드 귀족들은 군주로부터 자신들의 독립을 지키기위해서 고대의 권리와 역사적 선례에 따르기 시작했습니다. 처음엔 일부 소수의 슐라흐타-귀족 계급만이 다음 국왕을 선택할 수 있는 특권을 주장했습니다. (남자만 국왕으로 선출한 것은 아니며, 1384년에는 야드비가 여왕을, 1523년에는 안나 여왕의 왕위 계승권을 지지했습니다.) 그러나 결국 폴란드의 통치자를 선출할 수 있는 권리는 폴란드 귀족들에게 확대되었습니다. 잊지 말아야 할 것은 폴란드에서는 귀족 작위가 권리가 있는 모든 자녀들에게 상속되고 가장 많은 때는 거의 50만명의 폴란드인이 투표권을 주장할 수 있었습니다. 이는 르네상스 유럽에서 가장 많은 투표권자 수였고 미국과 프랑스의 혁명 이전까지 가장 보편적이었던 '민주주의' 제도였습니다. 진정한 의미의 국왕 선거는 1573년 헨리크 발레지(앙리 3세)가 선출될 때부터 시작되었는데, 외국인 왕자들은 폴란드의 왕좌에 대한 권리를 되는대로 항상 주장했고, 폴란드 귀족들이 그들 중의 하나를 뽑지 말라는 법도 없었습니다.\n\n폴란드-리투아니아 연방 시기에는, 폴란드의 왕이자 리투아니아의 대공은 바르샤바 외곽의 볼라 평원에 모인 귀족들에 의해 선출되었습니다. 수만명의 귀족들이 참석할 것으로 예상되었고, 부유한 대귀족들은 가난한 백작들의 표를 얻어냈습니다. 첫번째 선거는 4일이 걸렸습니다-차후에는 하루나 이틀이 걸렸습니다. 이 행사는 파티와 연인들 그리고 무장한 군인들로 가득했습니다. 선거가 진행되는 동안에는 임시섭정에게 왕권이 부여되었으며 대개 바르샤바의 대주교가 이를 담당하여 투표를 감독했습니다.
