Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/emperor_content_l_english.properties
+++ b/ko/emperor_content_l_english.properties
@@ -610,6 +610,7 @@ BYT_ideas_start코0=바이로이트 전통
 BYT_ideas_bonus코0=바이로이트 야망
 byt_land_of_the_hohenzollerns코0=호엔촐레른 변경백
 byt_land_of_the_hohenzollerns_desc코0=비록 내가 거대한 영지를 소유하지는 않았지만, 내 가문원들은 신성로마제국 내에서의 땅을 확보하는데 성공했다. 특히 브란덴부르크 선제후령의 땅들을. 만약 내가 브란덴부르크령의 사촌들과 친밀하고 좋은 관계를 가진다면, 선제후령의 귀족들은 두루두루 우리와 외교적 접촉을 맺고 싶어할 것이다.
+byt_ordre_de_la_sincerite코0=진실 수도회
 byt_gravenreuther_stift_desc코0=우리의 귀족 중 한명이 유언으로 그의 돈으로 부상자들을 위한 병원을 설립해달라고 요청했습니다. 만약 우리가 이 선행을 지원한다면 우리 부상당한 병사들은 더 빨리 전쟁에 재배치 될 수 있고, 우리는 좀 더 공격적인 정책을 취할 수 있습니다.
 byt_margravial_opera_house코0=마르크그라프 오페라 하우스
 byt_margravial_opera_house_desc코0=많은 사람들이 지방에 웅장한 오페라 하우스를 짓는 것이 불가능하다고 생각했지만, 우리는 프랑스와 이탈리아 바로크의 정수를 통합하여 다른 방식으로 증명해냈습니다. 고전적인 사원 스타일로 지어진 정면을 통해 웅장한 팡파레와 함께 건물에 들어서면, 비현실적인 세계, 시의 영역으로 발을 들여 놓습니다.
@@ -703,6 +704,7 @@ epi_latin_knights코0=라틴인 기사들
 epi_latin_knights_desc코0=우리 군대의 정예병은 서구식으로 무장한 잘 훈련된 기병대로 유지되고 있습니다. 일부는 그리스인이고 다른 일부는 이탈리아 용병이지만 모두 효율적입니다.
 epi_metropolis_of_knowledge코0=지식의 대도시
 epi_metropolis_of_knowledge_desc코0=비잔틴제국 시절부터 학문의 중심지로 여겨졌던 요안니나는, 서유럽의 지식과 사상이 유입되면서 그리스 계몽주의의 중심지로 발전하고 있습니다. 우리가 항상 그리스와 서유럽 사이의 관문이었듯, 우리는 이런 추세를 받아들여야 합니다.
+epi_trade_influences코0=아드리아해의 수출입항
 epi_trade_influences_desc코0=베네치아, 라구사, 콘스탄티노플, 알렉산드리아의 많은 위대한 무역 권역들의 경계에 우리 민족이 있는 가운데, 우리는 우리가 분주한 상업의 중심지가 되고, 많은 문화의 용광로가 되는 것을 보아왔습니다. 우리는 이것을 우리에게 유리하게 사용할 수 있습니다.
 epi_unity_in_strength코0=하나된 힘
 epi_unity_in_strength_desc코0=우리의 그리스식 전투술 유산은 우리의 강점입니다. 우리가 그리스, 로마, 비잔틴, 십자군으로부터 수년간 배운 것을 취하면서, 우리는 유럽에서 가장 잘 훈련된 군대들을 가지고 있습니다.
