--- a/ko/powers_and_ideas_l_english.properties
+++ b/ko/powers_and_ideas_l_english.properties
@@ -3861,15 +3861,15 @@ bal_baluch_leadership_desc코0=우리 군대는 페르시아나 인도 대륙에
 ORL_ideas코0=오를레앙 이념
 ORL_ideas_start코0=오를레앙 전통
 ORL_ideas_bonus코0=오를레앙 야망
+orl_brothers_of_kings코0=무슈 도를레앙
 
-
-
+orl_maid_of_orleans코0=오를레앙의 메이드
 
 orl_saffron_of_boynes코0=부아느의 사프란
 orl_saffron_of_boynes_desc코0=오를레앙은 전쟁과 파괴가 휩쓸고 지나간 후 다시 한번 생산의 중심지가 될 것입니다. 이것은 무역에 유리한 위치 선정 뿐만 아니라, 비옥한 보스 평원이 번영하는 미래를 약속해 주었기 때문이기도 합니다. 곧 부아느는 유럽 사프란 생산의 중심지가 될 것이고, 머나먼 국가에서조차 무역상들이 값비싼 향료를 사기 위해 몰려올 것입니다.
 orl_chateaux_of_the_loire_valley코0=루아르 계곡의 대저택
 orl_chateaux_of_the_loire_valley_desc코0=몇몇 지배자들에게는 프랑스 어느 곳에서도 여기보다 더 아름답고 평화로운 풍경을 찾을 수 없다는 자명한 사실을 찾아내는데 오랜 시간이 필요합니다. 그 비밀이 만 천하에 알려짐에 따라, 소유자의 권력과 건축가들의 위대한 재능을 동시에 보여주는 거대한 새 궁전이 루아르 계곡의 샤토에 지어지기 시작하였습니다.
-
+orl_faith_and_devotion코0=신앙과 헌신
 
 orl_calvin_and_moliere코0=칼뱅과 몰리에르
 orl_calvin_and_moliere_desc코0=오를레앙은 자신을 사랑하는 모든 이에게 신의를 지키며, 어떤 권위가 부당하다고 믿는 반란군의 곁에 서 있습니다. 오를레앙의 성처녀 잔 다르크로부터 장 칼뱅까지 여기서 법학을 공부한 모든 자들은 교황의 권위를 거부했고, 종교와 사회의 위선을 극장에서 조롱한 몰리에르라는 가명을 사용한 장 밥티스트 코틀리에까지 오를레앙에서 태어난 모든 아이들은 세계에 자신의 존재를 각인시켰습니다.
@@ -6674,16 +6674,16 @@ adu_expeditionary_sentiment코0=탐험의 정서
 adu_expeditionary_sentiment_desc코0=우리는 사로잡은 포르투갈 선원들로부터 금과 은이 넘쳐나는 서쪽의 신세계에 관한 이야기를 들었습니다. 우리는 이 소문들이 사실인지 직접 확인하기 위해서 독자적으로 대양을 횡단하는 탐험대를 조직해야 합니다.
 adu_al_awasim코0=알 아와심
 adu_al_awasim_desc코0=기독교 왕국들과의 국경의 요새화는 매우 중요합니다. 큰 대가를 치르게하는 공성전 없이는 적들이 우리 영토에 들어오지 못하도록 일련의 요새들을 세워야 합니다.
+NRM_ideas코0=노르만 이념
+NRM_ideas_start코0=노르만 전통
+NRM_ideas_bonus코0=노르만 야망
+nrm_norman_conquest코0=정복자들
 
+nrm_norman_philosophers코0=노르만의 철학자들
 
+nrm_channel_islands코0=채널 제도
 
-
-
-
-
-
-
-
+nrm_viking_explorers코0=항해자의 후손들
 
 
 
