--- a/ko/emperor_content_l_english.properties
+++ b/ko/emperor_content_l_english.properties
@@ -1132,6 +1132,8 @@ emperor_reichskrieg_desc코0=제국을 위협하려는 국가들에게 제국의
 emperor_imperial_estates_title코0=제국의 계층 권력 축소
 emperor_imperial_estates_desc코0=제국의 계층들의 자유를 축소해 더 이상 황제에 거역할 수 없도록 합니다.
 
+NOT_RELEVANT_TRADE_REGION코0=[Root.GetName] 측이 [From.GetName]의 주요 무역 노드에 최소 1%의 무역 점유율을 가져야 합니다.
+NOT_RELEVANT_TRADE_REGION_FROM코0=[From.GetName] 측이 [Root.GetName]의 주요 무역 노드에 최소 1%의 무역 점유율을 가져야 합니다.
 
 country_estate_nobles_name코0=[This.GetNobilityName]
 country_estate_burghers_name코0=[This.GetBurghersName]
