--- a/ko/emperor_content_l_english.properties
+++ b/ko/emperor_content_l_english.properties
@@ -849,6 +849,7 @@ curia.4.b코0=[Root.Capital.GetCapitalName]의 성벽은 버텨낼 것이다.
 moving_treasury_tt코0=평화가 회복되면 우리는 돈을 되찾을 것이다.
 protecting_treasury_tt코0=수도가 점령당하면, 돈을 잃을 것이다.
 curia.5.a코0=이게 가장 안전한 길이다.
+curia.7.a코0=주님께 감사드린다.
 curia.11.t코0=교황청의 간청
 curia.11.d코0=종교개혁의 도래로 십일조를 바치는 가톨릭국가들이 점점 더 적은어지고 있습니다. 진정한 신앙의 보루중 하나인 교황청은 이단자들에게 입은 피해를 보충하기 위해 우리의 기부를 늘려달라고 요청했습니다.
 curia.11.a코0=우리는 교회를 저버리지 않을 것이다.
