Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/flavor_events_l_english.properties
+++ b/ko/flavor_events_l_english.properties
@@ -1787,7 +1787,7 @@ flavor_fra.EVTOPTA3144코0=경제-사회 개혁
 flavor_fra.EVTOPTB3144코0=사회 변화 없는 경제 개혁
 flavor_fra.EVTOPTC3144코0=개혁은 없다!
 flavor_fra.EVTNAME3779코1=바스티유 습격
-
+flavor_fra.EVTDESC3779코2=의회의 구성 조차도 간신히 합의된, 삼부회에서 사회, 경제,헌법 개혁을 위한 행동 방침은 말할 것도 없이 몇 달 동안 교착된 논쟁에, 혁명 민중들은 진절머리가 났습니다. [Root.GetAdjective] 역사에 기록될 날인 [GetDateText] 오늘, 진보가 이뤄지지 않는 것에 진저리가 난 민중들은 스스로 문제를 해결했습니다. 군중들이 모여서 파리 위에 우뚝 솟은 감옥 요새이자 왕실의 압제의 상징인 바스티유를 습격했습니다. [Root.Monarch.GetTitle] [Root.Monarch.GetName](이)가 병력을 소환했지만, 군대가 민중들에게 발포하기를 거부하고 대신 반란에 가담하면서 [Root.Monarch.GetSheHe]는 무력하게 남겨졌습니다.\n\n이제, 민중들 사이에 혁명의 열의가 들끓으면서, 프랑스는 공화국으로 선언되었습니다. 혁명이 도래했습니다...
 flavor_fra.EVTOPTA3779코1=혁명 만세!
 flavor_fra.EVTNAME3145코0=공포 정치
 
