Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/flavor_events_l_english.properties
+++ b/ko/flavor_events_l_english.properties
@@ -1790,11 +1790,11 @@ flavor_fra.EVTNAME3779코1=바스티유 습격
 flavor_fra.EVTDESC3779코2=의회의 구성 조차도 간신히 합의된, 삼부회에서 사회, 경제,헌법 개혁을 위한 행동 방침은 말할 것도 없이 몇 달 동안 교착된 논쟁에, 혁명 민중들은 진절머리가 났습니다. [Root.GetAdjective] 역사에 기록될 날인 [GetDateText] 오늘, 진보가 이뤄지지 않는 것에 진저리가 난 민중들은 스스로 문제를 해결했습니다. 군중들이 모여서 파리 위에 우뚝 솟은 감옥 요새이자 왕실의 압제의 상징인 바스티유를 습격했습니다. [Root.Monarch.GetTitle] [Root.Monarch.GetName](이)가 병력을 소환했지만, 군대가 민중들에게 발포하기를 거부하고 대신 반란에 가담하면서 [Root.Monarch.GetSheHe]는 무력하게 남겨졌습니다.\n\n이제, 민중들 사이에 혁명의 열의가 들끓으면서, 프랑스는 공화국으로 선언되었습니다. 혁명이 도래했습니다...
 flavor_fra.EVTOPTA3779코1=혁명 만세!
 flavor_fra.EVTNAME3145코0=공포 정치
-
+flavor_fra.EVTDESC3145코2=혁명이 걸어온 경로에 모두가 만족하는 것은 아닙니다. 반동가들은 어디에나 있으며, 왕정을 회복할 기회를 노리고 있습니다. 이로 인해 특히 로베스피에르가 이끄는 호전적인 급진 세력이 국민 의회에서 권력을 장악하게 되었습니다. 그들은 왕정주의자들의 동조자들로 '생각되는' 이들을 집단 체포하고 단두대를 아끼지 않고 사용하는 것을 통해 '내부의 적'들을 뿌리 뽑기 위한 운동을 주장하고 있습니다.
 flavor_fra.EVTOPTA3145코0=혁명의 적을 처단하라!
 flavor_fra.EVTOPTB3145코0=관용을 보여라
 flavor_fra.EVTNAME3781코1=공포의 끝
-
+flavor_fra.EVTDESC3781코2=공포정치는 기간 동안 수많은 프랑스인들이 공화국의 이름으로 학살되었습니다. 하나의 위협이 제거되자마자 다음 위협이 식별되고 숙청되었습니다. '오늘은 너지만, 내일은 나다' 라는, 자신들이 다음이 될지도 모른다는 두려움에 국민 의회는 단결해서 [Root.Monarch.GetTitle] [Root.Monarch.GetName](을)를 끌어내려 공포정치를 끝냈고 국가에 안정을 되찾고 어느 누구도 혼란을 이용해 왕정을 회복하기 위한 구실을 삼지 않도록 보장하는 총재 정부를 설립했습니다.
 flavor_fra.EVTOPTA3781코1=칼로 흥한 자는 칼로 망한다.
 flavor_fra.EVTNAME3146코1=국왕의 운명
 flavor_fra.EVTDESC3146코0=1791년 6월 20일 왕족들의 도주가 실패하면서 그들은 가택 연금에 처해졌다. 공포 정치가 시작되었을 때 귀족들은 처형되었고 왕은 국외 세력과의 공모 혐의를 받아 반역자로 낙인 찍혔다. 국왕은 처음에는 퇴위하도록 강요받고 수감되어 '시민 카페(Citizen Capet)'로 불렸다. 1793년 1월 15일 국민 공회는 국왕의 처형에 대한 의제를 찬성 361표, 반대 360표로 표결하였다. 1793년 1월 21일 국왕 루이는 참수되었다.
