Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/flavor_events_l_english.properties
+++ b/ko/flavor_events_l_english.properties
@@ -2789,11 +2789,11 @@ flavor_pol.EVTOPTA3481코0=쓰라리지만 평화로운 갈등
 flavor_pol.EVTOPTB3481코1=[Root.Monarch.GetTitle](이)가 할 수 있는게 뭐가 더 있겠는가?
 flavor_pol.EVTOPTC3481코2=슐라흐타와 전쟁을 벌인다.
 flavor_pol.EVTNAME10코0=연맹 (콘페데레치아)
-
+flavor_pol.EVTDESC10코2=[Root.Monarch.GetName](이)가 세임으로부터 권력을 제거하기로 다짐한 것처럼, 세임 역시 [Root.Monarch.GetName]에게 독자적인 요구를 해왔습니다. Mikolaj Zebrzydowski, Jan Szczesny Herburt, Stanislaw Stadnicki, Aleksander Józef Lisowski 와 Janusz Radziwill은 스테지카와 루블린에서 로코슈(rokosz), 즉 반-합법적인 반란을 결성했습니다. 이 귀족들은 로코슈로 결집해 콘페데라치아(Konfederacja)를 결성했습니다. 콘페데라치아는 67개의 조항을 요구했는데, 헨리크 조항을 어긴 것에 대해 [Root.Monarch.GetName]의 퇴위를 요구하며, [Root.Monarch.GetTitle] 대신 세임이 국가의 관리들을 임명할 수 있는 권리를 가질 것을 요구했습니다.
 flavor_pol.EVTOPTA10코0=콘페데레치아와 협상을 시도한다
 flavor_pol.EVTOPTB10코0=그들의 요구를 각하한다
 flavor_pol.EVTNAME11코0=산도미어슈 로코슈(Sandomierz Rokosz)
-
+flavor_pol.EVTDESC11코1=[Root.Monarch.GetTitle]의 퇴위를 요구하는 콘페데라치아의 설립에 이어서, 반란 귀족들은 왕권에 대한 공공연한 반란을 일으켰습니다. 얀 카롤 코드키에비츠 사령관이 지휘하는 국왕군이 반란군을 진압하기 위해 파견되었지만, 그들의 요구 중 일부에 대해 협상하고 양보할 기회가 아직 있습니다.
 flavor_pol.EVTOPTA11코0=반군 지도자들과 협의하라
 flavor_pol.EVTOPTB11코0=반군을 진압하라
 flavor_pol.EVTNAME12코1=세임 진압
