Pontoon: Update Korean (ko) localization of Europa Universalias IV Co-authored-by: jin <muelleri529@gmail.com>

--- a/ko/emperor_content_l_english.properties
+++ b/ko/emperor_content_l_english.properties
@@ -1575,6 +1575,9 @@ HERCEGSEG코0=헤르체고비나 대공국
 HERCEG코0=헤르체그
 revolutionaries코0=혁명주의자
 revolutionaries_MECHANIC_TOOLTIP코0=혁명주의자
+separation_of_power_theocracy코0=권력의 분립
+nature_of_faith코0=우리 신앙의 본질
+faith_and_the_world코0=우리의 신앙과 세상
 mission_to_civilize_reform코0=문명화에 대한 사명
 mission_to_civilize_reform_desc코0=우리의 사명은 전세계에 있는 잘못 인도받은 불쌍한 원주민들을 찾아내고 그들이 우리의 신을 믿도록 그들에게 삶을 사는 적절한 방법을 가르쳐주는 것입니다.
 mission_to_kill_pirates_reform코0=공해 위의 사명
