--- a/en/emperor_l_english.properties
+++ b/en/emperor_l_english.properties
@@ -1040,3 +1040,5 @@ EXPAND_EMPIRE_CB코0=Gives casus-belli on non-members bordering the Empire to fo
 force_peasant_republic_desc코0=[From.GetName] will become a peasant republic.
 CB_ALLOWED_force_peasant_republic코0=Enforce Peasant Rule
 PEACE_force_peasant_republic코0=Enforce Peasant Rule
+ESTATE_PRIVILEGE_MAX_GRANTED코0=§RYou can't grant an estate more than 4 Privileges.§!
+
