--- a/en/diplomacy_l_english.properties
+++ b/en/diplomacy_l_english.properties
@@ -891,3 +891,4 @@ PEACE_SUBJECT_WILL_CALL코0=§RIf selected, you will be called to join their oth
 CLAIMSTATETITLE코0=Fabricate Claim on Area
 CLAIMSTATETITLEDESC코0=Fabricate a claim on all provinces in an area.
 CLAIM_STATE_SELECT_DESC코1=Fabricate Claim on Area will reduce the size of our $ADJ|Y$ Spy Network by $COST|R$ and give us claims on all $ADJ$ provinces in §Y$AREA$§W. The claims will last for $YEARS|Y$ years.
+CURIA_BUY_INDULGENCE_AT_WAR코0=§RYou are currently fighting a war over your excommunication.§!
