--- a/en/EU4_l_english.properties
+++ b/en/EU4_l_english.properties
@@ -3193,7 +3193,7 @@ MATCHMAKING_SERVER_NAME코0=Server name
 MATCHMAKING_SERVER_DESC코0=Description
 MATCHMAKING_SERVER_TAGS코0=Tags
 MATCHMAKING_SERVER_FILTER_SEARCH코0=Search for tags...
-MATCHMAKING_SERVER_SLOTS코0=Player Slots
+MATCHMAKING_SERVER_SLOTS코1=Players
 MATCHMAKING_SERVER_PING코0=Ping
 MATCHMAKING_SERVER_STATUS코0=Status
 MATCHMAKING_SERVER_PASSWORD코0=Password
@@ -3234,6 +3234,7 @@ MATCHMAKING_SERVER_VERSION코0=Version
 MATCHMAKING_FRIEND_STATUS_ONLINE코0=§MOnline§!
 MATCHMAKING_FRIEND_STATUS_PLAYING_THIS코0=§lPlaying Europa Universalis IV§!
 MATCHMAKING_FRIEND_STATUS_PLAYING_OTHER코0=§MPlaying Other Game§!
+MATCHMAKING_PLAYER_NAME코0=Player name\nMust be unique
 ALLOW_HOTJOIN코0=Allow players to hotjoin
 ALLOW_COOP코0=Allow players to play the same country
 ALLOW_COOP_MP코0=Allow players to play the same country
