--- a/en/common_sense_l_english.properties
+++ b/en/common_sense_l_english.properties
@@ -1623,7 +1623,7 @@ CALCULATING_CHECKSUM코0=Calculating Version...
 PLS_WAIT_CHECKSUM코0=Please wait for the version to finish being calculated.
 MP_DISABLED_NO_STEAM코0=Please start Steam to access multiplayer features.
 MP_DISABLED_NO_PDX_LOGIN코0=Please log in to your Paradox Account to access multiplayer features.
-LOGOUT_PDX코0=You are currently logged in. Click here to log out of your Paradox Account.
+LOGOUT_PDX코1=You are currently logged in with $ACCOUNT$ account. Click here to log out of your Paradox Account.
 LOGIN_PDX코0=You are currently not logged in. Click here to log in to your Paradox Account.
 ACHIEVEMENTS_CAN_BE_EARNED코0=Achievements §GCAN§! be earned this session.
 ACHIEVEMENTS_CANNOT_BE_EARNED코0=Achievements §RCANNOT§! be earned this session.
