--- a/en/core_l_english.properties
+++ b/en/core_l_english.properties
@@ -1,4 +1,5 @@
-﻿MENU_MESSAGES_DISABLE_ALL코0=Disable all
+﻿ONE_TIME_COST코0=Onetime Cost
+MENU_MESSAGES_DISABLE_ALL코0=Disable all
 ai_handicap코0=AI Bonuses
 player_handicap코0=Player Bonuses
 FILTER코0=Filter
@@ -104,7 +105,7 @@ INCOMETRADE코0=Trade
 INCOMEGOLD코0=Gold
 INCOMEVASSAL코0=Vassals
 INCOMEVASSALTAXEFF코0=Vassals Tax Efficiency
-INCOMELOAN코0=Interest
+INCOMELOAN코1=Loan
 INCOMESOW코0=Peace
 INCOMEDTAX코0=Census taxes
 INCOMEEXPORTDUTIES코0=Tolls
@@ -458,16 +459,16 @@ TRUST_LESS_THAN코0=Trust is less than
 TRUST_AT_LEAST코0=Trust at least
 NAVY_NONE코0=No navy
 ARMY_NONE코0=No army
-ARMY_BALANCE_LESS_THAN코1=Relative army size ratio compared to $COUNTRY|Y$ is less than
-ARMY_BALANCE_AT_LEAST코1=Relative army size ratio compared to $COUNTRY|Y$ is at least
-NAVY_BALANCE_LESS_THAN코1=Relative navy size ratio compared to $COUNTRY|Y$ is less than
-NAVY_BALANCE_AT_LEAST코1=Relative navy size ratio compared to $COUNTRY|Y$ is at least
-MILITARY_STRENGTH_LESS_THAN코1=Relative military strength ratio compared to $COUNTRY|Y$ is less than
-MILITARY_STRENGTH_AT_LEAST코1=Relative military strength ratio compared to $COUNTRY|Y$ is at least
-ARMY_STRENGTH_LESS_THAN코1=Relative army strength ratio compared to $COUNTRY|Y$ is less than
-ARMY_STRENGTH_AT_LEAST코1=Relative army strength ratio compared to $COUNTRY|Y$ is at least
-NAVY_STRENGTH_LESS_THAN코1=Relative naval strength ratio compared to $COUNTRY|Y$ is less than
-NAVY_STRENGTH_AT_LEAST코1=Relative naval strength ratio compared to $COUNTRY|Y$ is at least
+ARMY_BALANCE_LESS_THAN코2=Army size is less than §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+ARMY_BALANCE_AT_LEAST코2=Army size is at least §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+NAVY_BALANCE_LESS_THAN코2=Navy size is less than §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+NAVY_BALANCE_AT_LEAST코2=Navy size is at least §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+MILITARY_STRENGTH_LESS_THAN코2=Military strength is less than §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+MILITARY_STRENGTH_AT_LEAST코2=Military strength is at least §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+ARMY_STRENGTH_LESS_THAN코2=Army strength is less than §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+ARMY_STRENGTH_AT_LEAST코2=Army strength is at least §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+NAVY_STRENGTH_LESS_THAN코2=Navy strength is less than §Y$PERCENTAGE$%§! of $COUNTRY|Y$
+NAVY_STRENGTH_AT_LEAST코2=Navy strength is at least §Y$PERCENTAGE$%§! of $COUNTRY|Y$
 AI_PERSONALITY_CHANGE코0=Personality changes to §Y$PER$§W.\n
 AI_ATTITUDE_CHANGE코0=Attitude towards §Y$COUNTRY$§! changes to §Y$ATT$§W.\n
 IS_ON_CONTINENT코0=Is present in
@@ -540,7 +541,7 @@ SIEGE_BONUS_BLOCKADED코0=Phase progress modifier from province §Ybeing under a
 SIEGE_PROGRESS_DESC코0=Phase progress modifier from current §YSiege Status§!. Value goes from $MIN|Y0$ to $MEMORY|Y0$.
 PORT_BLOCKADE코0=$WHO$ (Development: $TAX|0$) is blockaded to $VAL|0$
 PORT_BLOCKADE_DESC코0=Blockades are calculated by comparing the total ship speed for your navy and the development of the province.
-PORT_BLOCKADE_SAIL_SPEED코0=Sail speed: $SPEED|0G$
+PORT_BLOCKADE_BLOCKADE_POWER코0=Blockade Power: $SPEED|0G$
 PORT_BLOCKADE_CAPACITY코0=This navy is able to fully blockade adjacent port provinces with a total development of $VAL|Y0$.
 NUM_OF_SHIPS코0=Total number of ships
 SIEGE_BONUS_DICE코0=Phase progress modifier from last §Ydie roll§!.
@@ -775,6 +776,7 @@ UNIT_VIEW_SPLIT_LOADED코0=Can't split since the unit is loaded on a ship!
 UNIT_VIEW_CREATE_NEW_LOADED코0=Can't create since the unit is loaded on a ship.
 UNIT_VIEW_CREATE_NEW_TRADE코0=Can't create a new fleet since the fleet is currently on a trade mission
 UNIT_VIEW_CREATE_NEW_HAS_LOADED코0=Can't create new fleet since current has an army loaded.
+BASE_VALUE_0코0=Base: $VAL|0$
 alert_rebels_enforce_demands_instant코0=§YYou have rebels that are close to enforcing their demands!§W
 alert_rebels_enforce_demands_delayed코0=
 alert_uncontested_claims_instant코1=§YYou have uncontested claims that will expire.§W
@@ -784,7 +786,8 @@ alert_high_overextension_delayed코0=Consider turning some non-core provinces in
 alert_high_war_exhaustion_instant코0=§YYour War Exhaustion is high!§W
 alert_high_war_exhaustion_delayed코0=This will negatively affect your nation!
 alert_too_many_leaders_instant코0=§YToo many military leaders!§W
-alert_too_many_leaders_delayed코0=Each leader over your free leader limit \nwill cost you 1 £mil£ each month.\nCurrently costs $AMT$ £mil£ each month.
+alert_too_many_leaders_army_delayed코0=Each general over your free leader limit \nwill cost you 1 £mil£ each month.\nCurrently costs $AMT$ £mil£ each month.
+alert_too_many_leaders_navy_delayed코0=Each admiral over your free leader limit \nwill cost you 1 £dip£ each month.\nCurrently costs $AMT$ £dip£ each month.
 alert_can_vote_for_cardinal_instant코0=§YYou can invest in a cardinal!§W
 alert_can_vote_for_cardinal_delayed코0=You have enough papal influence to invest in a future cardinal.
 alert_can_convert_province_instant코0=§YYou can convert provinces to $RELIGION$!§W
