--- a/en/achievements_l_english.properties
+++ b/en/achievements_l_english.properties
@@ -624,3 +624,20 @@ NEW_ACHIEVEMENT_59_NAME코0=Mary of Lotharingia
 NEW_ACHIEVEMENT_59_DESC코0=Starting as Burgundy, form Lotharingia and have a female ruler named Marie.
 NEW_ACHIEVEMENT_60_NAME코0=Holiest Roman Empire
 NEW_ACHIEVEMENT_60_DESC코0=As either the Papal States or the Emperor, have the Papal States as an Elector while the HRE is officially Catholic.
+# Leviathan
+NEW_ACHIEVEMENT_61_NAME코0=Wonderful
+NEW_ACHIEVEMENT_61_DESC코0=Own 8 different monuments on tier 3.
+NEW_ACHIEVEMENT_62_NAME코0=Spice Girls
+NEW_ACHIEVEMENT_62_DESC코0=Having a female ruler, have active trading bonuses for Cloves, Spices, Salt and Sugar.
+NEW_ACHIEVEMENT_64_NAME코0=To the Bone
+NEW_ACHIEVEMENT_64_DESC코0=As Bone, use pillage capital at least 7 times.
+NEW_ACHIEVEMENT_65_NAME코0=Keep the Flame Burning
+NEW_ACHIEVEMENT_65_DESC코0=As a Zoroastrian nation, own all Religious Centers and Monument Baku Ateshgah on tier 3.
+NEW_ACHIEVEMENT_66_NAME코0=New, New Deli
+NEW_ACHIEVEMENT_66_DESC코0=As Deli, have your capital in the Delhi province.
+NEW_ACHIEVEMENT_67_NAME코0=The Power of Three
+NEW_ACHIEVEMENT_67_DESC코0=Own a Crown Colony, a Self-Governing Colony and a Private Enterprise.
+NEW_ACHIEVEMENT_68_NAME코0=Quizquiz Pro Quo
+NEW_ACHIEVEMENT_68_DESC코0=As Quizquiz, have your capital in the Anjou province.
+NEW_ACHIEVEMENT_69_NAME코0=That's No Mon
+NEW_ACHIEVEMENT_69_DESC코0=As Pegu, own at least 50 provinces that are not of the Mon culture.
