--- a/en/common_sense_l_english.properties
+++ b/en/common_sense_l_english.properties
@@ -1507,7 +1507,7 @@ parlaments.6.t코0=[Root.GetName] Changes Stance in Debate!
 parlaments.6.d코2=Apart form being a seat of [Root.Owner.GetParliamentWithGrammar], [Root.GetName] is also the centre of a number of influential companies with a stake in overseas trade. It appears many of these have decided that they would benefit from the currently debated issue being implemented and have exerted pressure on their Members of [Root.Owner.GetParliamentWithGrammar] to make it so.
 parlaments.6.a코0=Great!
 parlaments.7.t코0=[Root.GetName] Changes Stance in Debate!
-parlaments.7.d코1=The army is in many ways the most influential internal force in [Root.GetName] and their loyalty to that organization has persuaded the Members of [Root.GetParliamentWithGrammar] from this seat to vote in favor of the current issue.
+parlaments.7.d코2=The army is in many ways the most influential internal force in [Root.GetName] and their loyalty to that organization has persuaded the Members of [Root.Owner.GetParliamentWithGrammar] from this seat to vote in favor of the current issue.
 parlaments.7.a코0=Great!
 parlaments.8.t코0=[Root.GetName] Changes Stance in Debate!
 parlaments.8.d코2=The current debate in [Root.Owner.GetParliamentWithGrammar] on how to best protect domestic production has attracted the attention of many in [Root.GetName]. This seat of [Root.Owner.GetParliamentWithGrammar] has come to support us in the debate, in the hope that it will benefit from the suggested policy.
@@ -1516,10 +1516,10 @@ parlaments.9.t코0=[Root.GetName] Changes Stance in Debate!
 parlaments.9.d코0=As the seat of our capital, the province of [Root.GetName] stands to benefit a lot from the currently proposed reforms. Luckily enough people have realized this to ensure that the seat is now voting in our favor.
 parlaments.9.a코0=Great!
 parlaments.10.t코0=[Root.GetName] Changes Stance in Debate!
-parlaments.10.d코0=It seems the MP's of the seat of [Root.GetName] have realized how beneficial the currently debated issue would be to them. Their support for our cause is most welcome.
+parlaments.10.d코1=It seems the MPs of the seat of [Root.GetName] have realized how beneficial the currently debated issue would be to them. Their support for our cause is most welcome.
 parlaments.10.a코0=Great!
 parlaments.11.t코0=[Root.GetName] Changes Stance in Debate!
-parlaments.11.d코0=It seems the MP's of the seat of [Root.GetName], staunch supporters of our cause just a little while ago, have come to change their opinion of the currently debated issue entirely. We cannot know for sure how this happened, but it is clear that we can no longer rely on their vote.
+parlaments.11.d코1=It seems the MPs of the seat of [Root.GetName], staunch supporters of our cause just a little while ago, have come to change their opinion of the currently debated issue entirely. We cannot know for sure how this happened, but it is clear that we can no longer rely on their vote.
 parlaments.11.a코0=Greed is a horrible thing.
 parlaments.12.t코0=Rotten Borough
 parlaments.12.d코1=While it looked like the vote of [Root.GetName] would in fact come out in support of the currently proposed reform to eliminate the Rotten Boroughs in our [Root.Owner.GetParliamentName], it seems whoever supported the MP in the area suddenly realized that he was about to lose his seat. He has now managed to convince the MP to vote against our reform.
@@ -1567,7 +1567,7 @@ parlaments.24.a코0=Grant them Greater Representation
 parlaments.24.b코0=Refuse their money.
 parlaments.24.c코0=Promise to take their views in consideration.
 parlaments.24.dd코0=Refuse their money.
-parlaments.25.t코0=Demands of the [Root.Culture.GetName]
+parlaments.25.t코1=Demands of the [Root.Culture.GetName] People
 parlaments.25.d코0=While our country lacks a national parliament, local assemblies exist since ancient times in many of our provinces. These have little influence outside of their own provinces but they will sometimes approach the state and their existence allows for a more efficient taxation of the provinces.\n\nLately trouble has been brewing in [Root.GetName], where a number of such provincial assemblies have recently begun to demand representation at a national level. They feel that they are poorly represented by the central government and that a central parliament where they could offer their opinions to the ruler would be the only way to alleviate this.
 parlaments.25.a코0=We will think about it.
 parlaments.25.b코0=Such ideas need to be crushed.
@@ -1581,10 +1581,10 @@ parlaments.28.t코0=Support of Local Assembly
 parlaments.28.d코0=The local assembly in [Root.GetName] has been quite enthusiastic in their support of our current proposition in [Root.GetParliamentWithGrammar]. So much so that they have already begun with the necessary preparations for what they are certain will be a certain approval.
 parlaments.28.a코0=Remarkable.
 parlaments.29.t코0=[Root.GetName] changes stance in debate!
-parlaments.29.d코0=Citing their eternal loyalty to the [Root.Owner.Monarch.GetTitle] and their full confidence in [Root.Owner.Monarch.GetHerHis] ability to know what is best for our state the MPs of the seat of [Root.GetName] have come out in support of our position in [Root.GetParliamentWithGrammar]. Their support for our cause is most welcome.
+parlaments.29.d코1=Citing their eternal loyalty to the [Root.Owner.Monarch.GetTitle] and their full confidence in [Root.Owner.Monarch.GetHerHis] ability to know what is best for our state the MPs of the seat of [Root.GetName] have come out in support of our position in [Root.Owner.GetParliamentWithGrammar]. Their support for our cause is most welcome.
 parlaments.29.a코0=Great!
 parlaments.30.t코0=[Root.GetName] changes stance in debate!
-parlaments.30.d코0=Citing their mistrust of [Root.Owner.Monarch.GetTitle] and [Root.Owner.Monarch.GetHerHis] ability to know what is best for our state, the MPs of the seat of [Root.GetName] have reversed their support of our position in [Root.GetParliamentWithGrammar].
+parlaments.30.d코1=Citing their mistrust of [Root.Owner.Monarch.GetTitle] and [Root.Owner.Monarch.GetHerHis] ability to know what is best for our state, the MPs of the seat of [Root.GetName] have reversed their support of our position in [Root.Owner.GetParliamentWithGrammar].
 parlaments.30.a코0=Their lack of trust is disturbing.
 DEFENSE코0=Defense
 TRADE코0=Trade
@@ -1625,6 +1625,7 @@ MP_DISABLED_NO_STEAM코0=Please start Steam to access multiplayer features.
 MP_DISABLED_NO_PDX_LOGIN코0=Please log in to your Paradox Account to access multiplayer features.
 LOGOUT_PDX코1=You are currently logged in with $ACCOUNT$ account. Click here to log out of your Paradox Account.
 LOGIN_PDX코0=You are currently not logged in. Click here to log in to your Paradox Account.
+LOGIN_PDX_PENDING코0=You are currently not logged in. Login process is in progress. Please wait...
 ACHIEVEMENTS_CAN_BE_EARNED코0=Achievements §GCAN§! be earned this session.
 ACHIEVEMENTS_CANNOT_BE_EARNED코0=Achievements §RCANNOT§! be earned this session.
 FORTS_ACTIVE코0=$X$ Forts Active
