--- a/en/cossacks_l_english.properties
+++ b/en/cossacks_l_english.properties
@@ -130,6 +130,7 @@ EST_VAL_THEOCRACY코0=Theocracy: §Y$VAL$%§!
 EST_VAL_RELIGIOUS_MINORITY코0=Religious Minorities: §Y$VAL$%§!
 EST_VAL_PROVINCES코1=Controlled Provinces: §Y$VAL$%§! (§Y$REAL_VAL$%§! before cap)
 EST_VAL_BASE코1=Base: $VAL|Y1$§Y%§!
+EST_VAL_ALLIANCE_ON_VC코1=Alliance With $NAME$: §R$VAL|1$%§!
 EST_VAL_DEV코1=Land Share: $VAL|Y1$§Y%§!
 EST_VAL_LOW_TRADE_INCOME코0=Low Trade Income: §Y$VAL$%§!
 EST_VAL_HIGH_TRADE_INCOME코0=High Trade Income: §Y$VAL$%§!
@@ -205,10 +206,13 @@ THREATENED_ATTITUDE_CANNOT_SET_POWER코0=§RYou cannot set your attitude to §YT
 THREATENED_ATTITUDE_CANNOT_SET_DISTANCE코0=§RYou cannot set your attitude to §YThreatened§! because §Y$COUNTRY$§! is not in a position to threaten §Y$PLAYER$§!.§!
 THREATENED_ATTITUDE_DESC코0=Setting your attitude to §YThreatened§! shows that you fear §Y$COUNTRY$§!. They will view this as a sign that you are willing to ally them for safety, but also that you are seeking other powerful allies to protect you against them.
 TRUST_DESC코1=§YTrust§! is a measure of the strength of any alliance we have with §Y$COUNTRY$§!. It decreases if we break promises or otherwise act dishonorably towards them. It can be increased by spending Favors. Trust will also increase with time as long as you are allied or one is the subject of the other.
-FAVORS_INSTANT코0=§Y$COUNTRY$§! owes us §Y$NUM$§! Favor(s).
-FAVORS_INSTANT_ALLY코2=As we are allied to them, we will gain a Favor every $YEARS|Y$ year(s). The amount of years needed to gain a Favor depends on the relative strength of our country to theirs. We will gain our next favor during §Y$YEAR$§!.
-FAVORS_INSTANT_NOT_OFFENSIVE_CALL코0=As we are refusing to join their offensive wars, we will be unable to gain new Favors and existing Favors will decay over time.
-FAVORS_INSTANT_NOT_ALLY코0=As we are not allied to them, we will be unable to gain new Favors and existing Favors will decay over time.
+FAVORS_INSTANT코1=§Y$COUNTRY$§! owes us §Y$NUM|2$§! Favor(s).
+FAVORS_GAIN_TOOLTIP코0=We gains $VAL|+=2$ favor(s) each month due to:\n$WHY$
+FAVOR_ALLIANCE_TT코0=Allied: Relative Strength: $VAL|+=2$
+FAVOR_ALLIANCE_BLOCKED_TT코0=Refused Offensive Wars: $VAL|+=2$
+FAVOR_CURRY_FAVORS_REP_TT코0=Currying Favors (Diplomatic Reputation): $VAL|+=2$
+FAVOR_CURRY_FAVORS_OPINION_TT코0=Currying Favors (Opinion): $VAL|+=2$
+FAVOR_LACK_OF_ALLIANCE_TT코0=Lack of Alliance: $VAL|+=2$
 FAVORS_DESC코0=§YFavors§! is a measure of how much §Y$COUNTRY$§! owes us for good deeds we have done them in the past, such as helping them in their wars and giving them land they want in our own wars. It can be spent to increase their Trust towards us, ask them to Prepare for War with another country, or to call them into a war where we are not promising them any territorial gains.
 TRUST_HIT_FROM_NO_LAND코0=§Y$WHO$§! is given fewer provinces than they expect from their §Y$CONT$%§! War Contribution, reducing their Trust by §R$AMT$§!.
 EXPECTS_BIGGER_DEAL코0=\n\n$WHO|Y$ believes we can press them for a better deal.
@@ -672,6 +676,7 @@ BUILD_UNIT_NOT_WHEN_EXPLORING코0=§RCannot build to navy units on exploration m
 BUILD_UNIT_NOT_WHEN_MOTHBALLED코0=§RCannot build to mothballed navy units.§!\n
 BUILD_UNIT_NOT_WHEN_AUTO_TRANSPORTING코0=§RCannot build to units that are being transported.§!\n
 BUILD_UNIT_NOT_AT_SEA코0=§RCannot build to navy units on the open sea.§!\n
+BUILD_UNIT_ONLY_TRANSPORTS코0=§RCan only build transports!§!\n
 THREATENWARTITLE코0=Threaten War
 THREATENWARDESC코0=This threatens them with war over a province you have a claim or core on. There is a chance they will back down depending on how much they fear you. If they do not, a war for that province starts. If on the other hand they accept and you gain the province, there will be a truce.
 THREATENWAR_DESC코0=We will demand $PROV|Y$ from $THEM$ under the threat of war.
