--- a/en/cradle_of_civilization_l_english.properties
+++ b/en/cradle_of_civilization_l_english.properties
@@ -183,10 +183,13 @@ improve_inland_routes_desc코0=Your Merchant will gather knowledge of the terrai
 propagate_religion_desc코0=Your pious Merchant will work towards spreading the One True Faith in this Node.
 TRADING_POLICY_EFFECT코0=$NAME|Y$ Trading Policy:\n$MOD$
 PROVINCES_IN_NODE코0=§YAll provinces in this Node:§!\n
+DESELECT_CARPET_AREA코1=Click to remove $AREA|Y$ from Carpet Sieging.
 CANCEL_DRILLING_MOVE_CONFIRM_TITLE코0=Cancel Army Drilling
 CANCEL_DRILLING_MOVE_CONFIRM_DESC코1=Are you sure you want to move $ARMY|Y$ and cancel drilling it?
 CANCEL_REBEL_HUNT_MOVE_CONFIRM_TITLE코0=Cancel Autonomous Rebel Suppression
 CANCEL_REBEL_HUNT_MOVE_CONFIRM_DESC코0=Are you sure you want to move $ARMY|Y$ and cancel Autonomous Rebel Suppression?
+CANCEL_CARPET_SIEGE_MOVE_CONFIRM_TITLE코0=Cancel Autonomous Carpet Sieging
+CANCEL_CARPET_SIEGE_MOVE_CONFIRM_DESC코0=Are you sure you want to move $ARMY|Y$ and cancel Autonomous Carpet Sieging?
 CANCEL_DRILLING_LOAD_CONFIRM_TITLE코0=Cancel Army Drilling
 CANCEL_DRILLING_LOAD_CONFIRM_DESC코1=Are you sure you want to move $NAVY|Y$ and cancel drilling the army connected to it?
 CANCEL_ARMY_MISSIONS_MULTIPLE_CONFIRM_TITLE코0=Cancel Army Missions
@@ -736,7 +739,7 @@ mamluk_events.0.b코0=Only the [second_ruler_alternative_province.Culture.GetNam
 mamluk_events.0.c코0=The [third_ruler_alternative_province.Culture.GetName] candidate has our support!
 mamluk_events.0.dd코0=The best alternative is one who has no ties to the groups in [Root.Capital.GetCapitalName]...
 mamluk_events.1.t코0=[not_ruling_culture_province.Culture.GetName] Soldiers
-mamluk_events.1.d코0=While Mamluks make up the core of our forces not all of our military might consists of warrior slaves. Local [not_ruling_culture_province.Culture.GetName] soldiers make up much of our infantry and they are also used for guard and garrison duties.\nSmall chances of advancement and low pay aren’t the best motivators however and it is not clear how far we can trust these men. Certainly their training and equipment are often neglected by the Amir in charge of them.\nIn [not_ruling_culture_province.GetAreaName] the mistrust between the [not_ruling_culture_province.Culture.GetName] and Mamluk Amirs have lead to a mutiny.
+mamluk_events.1.d코1=While Mamluks make up the core of our forces not all of our military might consists of warrior slaves. Local [not_ruling_culture_province.Culture.GetName] soldiers make up much of our infantry and they are also used for guard and garrison duties.\nSmall chances of advancement and low pay aren’t the best motivators however and it is not clear how far we can trust these men. Certainly their training and equipment are often neglected by the Amir in charge of them.\nIn [not_ruling_culture_province.GetAreaName] the mistrust between the [not_ruling_culture_province.Culture.GetName] and Mamluk Amirs have led to a mutiny.
 mamluk_events.1.a코0=We must crush this in its cradle!
 mamluk_events.1.b코0=Let us see what we can do to improve their situation.
 mamluk_events.2.t코0=The Tarh and the Royal Monopolies
