--- a/en/dharma_l_english.properties
+++ b/en/dharma_l_english.properties
@@ -285,6 +285,7 @@ jains_estate_events.2.t코0=Jain Influence Expands
 jains_estate_events.2.d코0=Many influential Jains have found a home in the court of [Root.Country.GetName]. Jain ascetics, bankers, and merchants alike have the ear of the [Root.Monarch.GetTitle]. There are even rumors that [Root.Monarch.GetName] [Root.Monarch.GetHerselfHimself] has joined in Jain rituals. Though a small religious minority, the Jains are gaining power in politics and society.
 jains_estate_events.3.t코0=Jain Influence Declines
 jains_estate_events.3.d코0=The Jains once again find themselves lacking in social capital. Prominent ascetics have managed to get themselves exiled from court following a series of religious and political disagreements, and Jain merchants find their fortunes are waning. Jain influence is on the decline.
+jains_estate_events.3.a코0=Accept
 jains_estate_events.4.t코0=Jains Resist Persecution
 jains_estate_events.4.d코0=The Jain community of [Root.Country.GetName] have become utterly disloyal following many acts of disrespect and persecution by the state. The situation has become great exacerbated by an outrageous act of sacrilege. One of our [Root.Religion.GetName] governors marched into a Jain temple, slaughtered a cow, and desecrated the noses of all the icons inside. Unwilling to accept further persecution, the Jain community has resolved to oppose our government. Their methods of resistance are unorthodox yet effective; rather than rising up in violent rebellion they boycott institutions of state, deny loans, and refuse all participation in government. Our reliance on the Jain community has become a damning vulnerability.
 jains_estate_events.4.a코0=At least they are pacifists.
@@ -437,9 +438,9 @@ REFORM_LEVEL_LOCKED_DESC코1=You cannot select any of these.
 REFORM_LEVEL_NEEDS_PREVIOUS_DESC코0=You need to enact the previous tiers before selecting any of these.
 CURRENT_REFORM_PROGRESS코0=You have $POINTS$ of reform progress: you need $REQPOINTS|Y$ to enact the next reform.
 NEXT_REFORM_EXPECTED코0=We expect to reach this $WHEN|Y$.
-REFORM_PROGRESS_DEV코1=\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year multiplied by (§Y100-Average Autonomy§!).\n
-REFORM_PROGRESS_BUILDINGS코0=\n $POINTS|G$ from Courthouses and Town Halls
-REFORM_PROGRESS_MODIFIER_DESC코2=You gain $POINTS|Y$ every mont due to:$FROM_AUTONOMY$$FROM_BUILDINGS$\n\nThe lower the local autonomy is the faster you will gain reform points.
+REFORM_PROGRESS_DEV코4=\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year divided by (12 * (100-§Y$LOCALAUTONOMY$%§!)).\n
+REFORM_PROGRESS_BUILDINGS코1=\n $POINTS|G$ from Buildings
+REFORM_PROGRESS_MODIFIER_DESC코3=You gain $POINTS|Y$ every month due to:$FROM_AUTONOMY$$FROM_BUILDINGS$$FROM_MONTHLY$\n
 REFORM_INCREASED_COST코1=Each tier of Reforms will increase the cost by §Y50§!
 YELLOW_TEXT코0=$NAME|Y$
 GREEN_TEXT코0=$NAME|G$
@@ -623,10 +624,13 @@ native_name코0=Native
 MODIFIER_MIN_AUTONOMY_IN_TERRITORIES코0=Minimum Autonomy in Territories
 mechanic_has_parliament_yes코2=Enables Parliament.\nDisables Nobility estate.
 mechanic_has_parliament_no코1=Disable Parliament.
+mechanic_raze_province_yes코0=Can Raze Provinces
+mechanic_raze_province_no코0=Can NOT Raze Provinces
 MODIFIER_LEADER_COST코0=Leader cost
 MODIFIER_CANDIDATE_RANDOM_BONUS코1=Random Candidate Bonus
 MODIFIER_ELECTION_CYCLE코1=Length of Election Term
 NO_REBEL_HUNT_MOVING코0=§RYou cannot manage Rebel Suppression while moving§!\n
+NO_CARPET_SIEGE_MOVING코0=§RYou cannot manage Carpet Sieging while moving§!\n
 CURRENT_REFORM코0=§YThis is your current selected reform on this level.§!
 REFORM_LEVEL_TITLE코0=Tier $LEVEL$: $NAME|Y$
 GOVERNMENT_ABILITIES코1=Enables $ABILITY$ Ability.
@@ -681,6 +685,7 @@ COT_RIGHT_CLICK_TO_DOWNGRADE_SUBJECT코0=Right click to downgrade to $NAME|Y$ fo
 COT_MIN_LEVEL코0=§RYou cannot downgrade the Center of Trade because it is already at the lowest level!§!
 COT_NEGATIVE_PRESTIGE코0=§RYou cannot downgrade the Center of Trade if you have Negative prestige!§!
 COT_MAX_LEVEL코0=§RYou cannot upgrade the Center of Trade because it is already a top level!§!
+COT_NOT_ENOUGH_DEVELOPMENT코0=§RUpgrading to a $UPGRADE_NAME|Y$ requires $NEED$ development, but this province only have $CURR$
 COT_NOT_ENOUGH_MONEY코0=§RUpgrading the Center of Trade requires $REQUIRED|Y$¤ but you only have $AVAILABLE|Y$¤.§!
 COT_MAX_LEVEL_IN_COUNTRY코1=The maximum number of top level Centers of Trade is limited to the number of Merchants you have.\n\n§RYou cannot upgrade to $UPGRADE_NAME|Y$ as you already have $NUM_CENTERS|Y$ top level Centers of Trade in your country.§!
 COT_MAX_LEVEL_IN_STATE코0=§RYou already have a top level Center of Trade in $STATE|Y$!§!
@@ -833,9 +838,9 @@ ASSIMILATED_CULTURE_GROUPS_TOOLTIP_TITLE코0=§YAssimilated Culture Groups§!
 ASSIMILATED_CULTURE_GROUPS_TOOLTIP_DESC코0=Assimilated culture groups will give you various different benefits. A group becomes assimilated when you own all provinces that has a culture that belongs to that group. If you do not hold all those provinces you will lose the modifier.
 ADOPT_GOVERNMENT_PROGRESS코0=$TO|Y$ gains Government Reform Progress spent on current Reforms by $FROM|Y$.\n
 REFORM_DESELECTED_TITLE코0=Government Reform abolished
-REFORM_DESELECTED_DESC코1=Changes in your Country have lead to the Reform $REFORM|Y$ no longer being viable and it has now been abolished.
+REFORM_DESELECTED_DESC코2=Changes in your Country have led to the Reform $REFORM|Y$ no longer being viable and it has now been abolished.
 GOVERNMENT_DESELECTED_TITLE코0=Government abolished
-GOVERNMENT_DESELECTED_DESC코0=Changes in your Country have lead to the Government $REFORM|Y$ no longer being viable and it has now been abolished. It has been replaced with $REPLACEMENT|Y$.
+GOVERNMENT_DESELECTED_DESC코1=Changes in your Country have led to the Government $REFORM|Y$ no longer being viable and it has now been abolished. It has been replaced with $REPLACEMENT|Y$.
 estate_church_bribe코0=Placate Clergy
 estate_nobles_bribe코0=Placate Nobility
 estate_burghers_bribe코0=Placate Merchants
