--- a/en/diplomacy_l_english.properties
+++ b/en/diplomacy_l_english.properties
@@ -1,4 +1,5 @@
-﻿rival코0=Rival
+﻿SUPPORT_REBELS_POWER_PROJECT코0=This will also increase our power projection against them.
+rival코0=Rival
 allied_to_rival코0=Allied to Rival
 enemy_of_my_enemy코0=Enemy of Enemy
 subsidizing_our_armies코0=They subsidize our armies
@@ -233,7 +234,7 @@ SLANDERMERCHANTSDESCDERIVED코0=Slander Merchants will reduce the size of our $A
 SLANDERMERCHANTSALREADYPRESENTDESC코0=Their merchants are already being slandered.
 SUPPORTREBELSTITLE코0=Support Rebels
 SUPPORTREBELSDESC코0=\nSupport rebels in a country.
-SUPPORTREBELSDESCDERIVED코0=Supporting a rebel faction will reduce the size of our $ADJ|Y$ Spy Network by $COST|R$ and increase their chance of making progress towards an uprising each month by §Y$AMT$%§! for a period of $YEARS|Y$ years.\n\nYou will also support them during their uprising. If the rebels gain power they will become your ally.
+SUPPORTREBELSDESCDERIVED코1=Supporting a rebel faction will reduce the size of our $ADJ|Y$ Spy Network by $COST|R$ and increase their chance of making progress towards an uprising each month by §Y$AMT$%§! for a period of $YEARS|Y$ years.\nYou will also support them during their uprising. If the rebels gain power they will become your ally.
 SUPPORTREBELSDESCALREADYPRESENTDESC코0=Someone is already supporting these rebels in the target country.
 SUPPORTREBELSDESCNOREBELSDESC코0=There are no rebels to support.
 SUPPORT_REBELS_OVERLORD코0=It is not possible to support rebels in one of your subjects.
@@ -252,7 +253,7 @@ SOWDISCONTENTTITLE코0=Sow Discontent
 SOWDISCONTENTDESC코0=Sow discontent among the population of the target.
 SOWDISCONTENTDESCDERIVED코0=Sow Discontent will reduce the size of our $ADJ|Y$ Spy Network by $COST|R$ and have the following effects on them:\n$DESC$\n\nIt will last until $DATE|Y$.
 SOWDISCONTENTALREADYPRESENT코0=Their people's discontent has already been stirred.
-UNTIL_DATE_EFFECTS코0=\nUntil §Y$DATE$§!, this has the following effects:\n $DESC$.
+UNTIL_DATE_EFFECTS코0=\nUntil §Y$DATE$§!, this has the following effects:\n$DESC$.
 AGITATE_EFFECTS코0=§YLiberty Desire§!: §G+$VAL$%§!
 AGITATEFORLIBERTYALREADYPRESENTDESC코0=Someone is agitating them for liberty.
 CANCEL_SOWDISCONTENTTITLE코0=Cancel Sow Discontent
@@ -499,7 +500,7 @@ CHINESE_UNIFICATION_WAR_NAME코0=$ORDER$$FIRST$-$SECOND$ war over Chinese Hegemo
 CELESTIAL_EMPIRE_WAR_NAME코0=$ORDER$$FIRST$-$SECOND$ war for Mandate of Heaven
 FORCE_MIGRATION_WAR_NAME코0=$ORDER$$FIRST$-$SECOND$ forced migration war
 IN_WARGOAL_COST코1=Part of the war goal and will not result in any extra £dip cost for $WHO|Y$!
-NOT_IN_WARGOAL_COST코0=Not part of the war goal and will result in an extra cost of §Y$COST$§!£dip  for $WHO|Y$!
+NOT_IN_WARGOAL_COST코1=Not part of the war goal and will result in an extra cost of §Y$COST$§!£dip Diplomatic power for $WHO|Y$!
 UNLAWFUL_TERRITORY_WARN코0=§RUnlawful territory, the Emperor may demand you to return it!§!
 UNLAWFUL_TERRITORY_WARN_DELAY코0=Since this province is part of the Empire and not your core, it will be considered unlawful territory if you take it.
 RELEASE_NATION_BY_WHOM코0=$NEW_NATION$ will be released by $RELEASER$
@@ -584,6 +585,7 @@ BUILDSPYNETWORK_LONG_DESC_1코0=Send a diplomat to build up our network of spies
 BUILDSPYNETWORK_LONG_DESC_1_SUBJECTS코0=Send a diplomat to build up our network of spies and informants in $COUNTRY|Y$ and their subjects ($SUBJECTS$)?
 BUILDSPYNETWORK_LONG_DESC_2코0=They will increase the size of our Spy Network by $AMT|G$ each month.\n\nWhile our agent is active and the Spy Network is larger than §Y25§!, there is a §R$RISK$%§! risk of discovery each month. If we are discovered, it will damage relations with the target country, reduce the size of our network and prevent us from further growing it for a while.
 CANCEL_BUILDSPYNETWORK_LONG_DESC코0=Recall the agents building up our network of spies and informants in $COUNTRY|Y$? Our existing network will slowly decay when not actively being built up.
+CURRY_FAVORS_OUTLINER코0=$NAME$ is currying favors with $COUNTRY|Y$. We now gain $VAL|+=2$ favors each month due to:\n$WHY$
 COUNTERESPIONAGE_OUTLINER코0=$NAME$ is conducting Counterespionage in $PROV|Y$ ($COUNTRY|Y$). This increases our chance of detecting agents they send at us by $AMT$.
 COUNTERESPIONAGE_NO_SUBJECT코1=As a Subject we cannot conduct counterespionage.
 COUNTERESPIONAGETITLE코0=Counterespionage
@@ -658,7 +660,7 @@ CALL_CHECKBOX_ALLIED_TO_ENEMY코0=§RYou cannot call an ally that will be called
 CALL_ALLIES코0=Call Allies
 ENEMY_ALLIES코0=Enemy Allies
 CALL_COLONIAL_ALLIES코0=Call Subjects
-FULL_ALLY_CHECKBOX_WILL_AUTOJOIN코1=The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! will be considered a co-belligerent in this war but will NOT be able to call their own allies.
+FULL_ALLY_CHECKBOX_WILL_AUTOJOIN코2=The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! will join this war on behalf of the defender but will NOT be able to call their own allies.
 FULL_ALLY_CHECKBOX_WILL_CALL코1=The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! will be considered a co-belligerent in this war. They will be able to call their own allies.
 FULL_ALLY_CHECKBOX_WILL_NOT_CALL코1=The enemy $SUBJECTORALLY$ §Y$COUNTRY$§! will NOT be considered a co-belligerent in this war. They will NOT be able to call their own allies, but it will be twice as expensive to take their provinces.
 FULL_ALLY_CHECKBOX_DESC코1=§GClick to change whether or not to consider this enemy $SUBJECTORALLY$ a co-belligerent.§!
@@ -696,7 +698,7 @@ HAS_NO_INTEGRATION코0=Has no active integration.
 REDUCED_BADBOY코0=Reduced Aggressive Expansion: 
 AGGRESSIVE_EXPANSION_TITLE코0=Aggressive act will upset other countries by a base of $VAL$.
 AGGRESSIVE_EXPANSION_FACTOR코0=Aggressive expansion modifiers:
-PEACE_EFFECTS_BADBOY코1=With $THE$$CASUS$ Casus Belli, $ACTIVE$ suffers a base of $BADBOY$ Aggressive Expansion relations penalty.
+PEACE_EFFECTS_BADBOY코2=With $THE$$CASUS$ Casus Belli, $ACTIVE$ suffers a maximum of $BADBOY$ Aggressive Expansion relations penalty.
 PEACE_DEFENDER_EFFECTS_BADBOY코1=As a defender, $ACTIVE$ suffers a base of $BADBOY$ Aggressive Expansion relations penalty
 ENFORCE_PEACE_INVALID_TARGET코0=You cannot enforce a peace between two junior partners in a war like $WHO$ and $TARGET$.
 ENFORCE_PEACE_INVALID_TARGET_NOT_WAR코0=We cannot enforce a peace, as $WHO$ is not at war with $TARGET$!
@@ -891,4 +893,4 @@ PEACE_SUBJECT_WILL_CALL코0=§RIf selected, you will be called to join their oth
 CLAIMSTATETITLE코0=Fabricate Claim on Area
 CLAIMSTATETITLEDESC코0=Fabricate a claim on all provinces in an area.
 CLAIM_STATE_SELECT_DESC코1=Fabricate Claim on Area will reduce the size of our $ADJ|Y$ Spy Network by $COST|R$ and give us claims on all $ADJ$ provinces in §Y$AREA$§W. The claims will last for $YEARS|Y$ years.
-CURIA_BUY_INDULGENCE_AT_WAR코0=§RYou are currently fighting a war over your excommunication.§!
+
