--- a/en/emperor_estates_l_english.properties
+++ b/en/emperor_estates_l_english.properties
@@ -322,7 +322,7 @@ estate_brahmins_for_the_faith_effect_tooltip코2=Morale of Armies: §G+5%§! whe
 estate_brahmins_flexible_deities_revoke_tooltip코1=The decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy will be disabled.
 estate_maratha_levies코0=Increased Levies
 estate_maratha_levies_for_muslims코0=Increased Maratha Recruitment
-estate_maratha_levies_for_muslims_effect_tooltip코0=Every owned province of §YHindu§! faith gains §Y'Increased Maratha Recruitment'§!, giving the following effects:\nLocal Manpower Modifier: §G+20.0%§!
+estate_maratha_levies_for_muslims_effect_tooltip코1=Every owned province of §YHindu§! faith gains §Y'Increased Maratha Recruitment'§!, giving the following effects:\nLocal Manpower Modifier: §G+30.0%§!
 estate_maratha_levies_for_muslims_revoke_tooltip코0=The modifier §Y'Increased Maratha Recruitment'§! is removed from all owned §YHindi§! provinces.
 estate_maratha_levies_for_muslims_mod코0=Increased Maratha Recruitment
 desc_estate_maratha_levies_for_muslims_mod코0=The state has increased its recruitment of the Marathas.
@@ -625,6 +625,7 @@ agenda_guaranteed_minority_rights코0=Minority Rights Guaranteed
 desc_agenda_guaranteed_minority_rights코0=The rights of the minority in this province have recently been guaranteed, allowing the populace to breathe a sigh of relief.
 #New Parliamentary Debate
 increase_crown_land_share코0=Centralize Land Ownership
+desc_increase_crown_land_share코0=By centralizing the ownership of the land in royal hands, we can control the widespread power of the Estates much better.
 #Estate monopoly events
 monopoly_privileges.1.t코0=Extension of the Monopoly on Textiles
 monopoly_privileges.1.d.burghers코0=The monopoly on textiles we granted to the [Root.GetBurghersName] has expired, meaning that we are now able to reclaim the income from our textile production. However, the [Root.GetBurghersName] are keen to keep their privileges and are offering to pay us a lump sum in return for the monopoly being guaranteed for a further 10 years.
@@ -712,7 +713,7 @@ is_root_religion코0=Is §Y[Root.Religion.GetName]§!.
 
 pay_crown_land코0=Allow Use of Crown Lands
 
-estate_church_propagate_religion_trigger_tooltip코1=All inhabited provinces in the §Y[agenda_trade_node.GetTradeNodeName]§! trade node follow the §Y[Root.Religion.GetName]§! faith.
+estate_church_propagate_religion_trigger_tooltip코2=All inhabited provinces in the §Y[agenda_trade_node.GetTradeNodeName]§! trade node follow the §Y[Root.Religion.GetName]§! faith, or follow a Christian, Muslim, or Jewish faith.
 agenda_automatically_completed_explain_dhimmi코0=§R25%§! local autonomy is added to §Y[agenda_province.GetName]§!.
 estate_nobles_protect_our_culture_effect_tooltip코0=If conquered, §Y[agenda_province.GetName]§! will lose §G5§! years of separatism.
 owned_by_country_of_root_religion코0=Is owned by a country of §Y[Root.Religion.GetName]§! faith.
