--- a/en/EU4_l_english.properties
+++ b/en/EU4_l_english.properties
@@ -484,7 +484,7 @@ HAS_GOVERNMENT_MECHANIC코0=Government has $MECHANIC$ mechanic.\n
 NOT_HAS_GOVERNMENT_MECHANIC코0=Government doesn't have $MECHANIC$ mechanic.\n
 GOVERNMENT_RANK_BENEFITS_TITLE코0=The Government Rank $RANK|Y$ gives the following benefits:\n
 CHAR_CULTURE_CHANGE코0=$WHO$ becomes $CUL|Y$.\n
-CHAR_RELIGION_CHANGE코0=$WHO$ becomes $CUL|Y$.\n
+CHAR_RELIGION_CHANGE코0=$WHO$ becomes $REL|Y$.\n
 ADVISOR_CULTURE_RELIGION코1=$NAME|Y$ is a $CUL|Y$ $REL|Y$.
 EMBRACED코0=Embraced
 PRESENT코0=Present
@@ -1027,7 +1027,7 @@ SIEGEINFO_BREACH코0=Breach: §G+$VAL$§!\n
 SIEGEINFO_MECHANICS코0=§G+1d$DICE$§! is also added each siege check (§Y$POSS$§! to $POSS2$§!)\nUp to §Y$STORE$§! is saved until next check in status of fort.\nA siege is won when the total siege value is at least §Y$WIN$§! when a siege check is done. The defensiveness of the defender impacts how often a siege check will happen, the next one will be at §Y$DATE$§!.\nThere is a §Y$CHANCE$%§! chance that this fort will fall at that date.
 SUPPLIES_SHORTAGE코0=Supplies Shortage
 LEDGER_CASH코0=¤
-SCORE_GREATPOWER코0=Great Power: §G+$VAL$§!\n
+SCORE_GREATPOWER코1=Great Power: §G$VAL$§!\n
 ADM_SCORE_INCOME코0=Monthly Income: §G+$VAL$§!\n
 ADM_SCORE_TECH코0=Administrative Technology: §G+$VAL$§!\n
 ADM_SCORE_PROVS코0=Provinces: §G+$VAL$§!\n
@@ -1177,12 +1177,12 @@ TOO_FAR_AHEAD_THIS_IMP_REFORM코1=$WHICH$ is a reform that is too advanced, we n
 NOT_ENOUGH_BACKERS_IMP_REFORM코0=There is not enough support in the diet for reform, with §G$FOR$§! being for it and §R$AGAINST$§! against!
 NOT_ENOUGH_AUTHORITY_IMP_REFORM코0=You need at least §R$COST$§! Imperial Authority, but you only have §Y$CURR$§!.
 ENACT_REFORM코0=Enacting §Y$REFORM$§! will remove all your current Imperial Authority.
-MEMBER_BACKING_DUE_TO코0=They are backing '§G$REFORM$§!' due to: ($SCORE$)
-MEMBER_OPPOSE_DUE_TO코0=They oppose '§R$REFORM$§!' due to: ($SCORE$)
+MEMBER_BACKING_DUE_TO코1=They are backing the following reforms ($SCORE$):\n$REFORMS$\ndue to:\n
+MEMBER_OPPOSE_DUE_TO코1=They oppose the following reforms ($SCORE$):\n$REFORMS$\ndue to:\n
 FOLLOWING_BACK_IMP_REF코0=There are §Y$COUNT$§! princes for the reform:\n$WHO$
 ALL_AGAUNST_IMP_REF코0=There are §R$COUNT$§! princes against the reform:\n$WHO$
 HEIR_CHANCE_TOOLTIP코0=Our chance to get an heir is modified by $CHANCE$.
-HEIR_CHANCE_TOOLTIP2코0=If our heir dies or gets inherited, then our chance to get a new heir is modified by $CHANCE$.
+HEIR_CHANCE_TOOLTIP2코1=If our heir dies or gets disinherited, then our chance to get a new heir is modified by $CHANCE$.
 HEIR_WHY_TT코0=Due to the following:\n$WHY$
 CAN_NOT_BUILD_BUILDING_IN_PROVINCE코1=Cannot build $BUILDING$ in $PROVINCE$
 CAN_BUILD_BUILDING_IN_PROVINCE코0=Can build $BUILDING$ in $PROVINCE$
@@ -1211,7 +1211,7 @@ RPH_NOT_CORE코0=$NAME$ has to be a $ADJ$ core to allow it to be removed from th
 RPH_EMPEROR코0=As the Emperor we cannot remove provinces from the Empire.
 RPH_PRINCE_OF_EMPIRE코0=As a member of HRE, we cannot remove individual provinces from the HRE. If we leave the Empire we must give up any non-core HRE provinces
 RPH_ELECTOR코0=As an Elector, we cannot remove provinces from the Empire.
-RPH_AT_WAR코1=We cannot remove provinces from the HRE, while at war!
+RPH_AT_WAR코1=We cannot remove provinces from the HRE while at war!
 RPH_SUBJECT코0=We need to be independent to remove provinces from the HRE.
 RPH_TRUCE_EMP코0=It is not possible to remove provinces from the HRE while in a truce with the Emperor.
 WRONG_RELIGION_GROUP코0=They belong to a different religion group and will not respond to such a demand.
@@ -1361,7 +1361,10 @@ DEFINE_QUEEN_EFFECT_UNKNOWN코5=A new $CONSORT$$SKILLS$$CULTURE$$RELIGION$ appea
 DEFINE_QUEEN_EFFECT코5=$NAME|Y$$SKILLS$$CULTURE$$RELIGION$ becomes the new $CONSORT$$AGE$.\n
 DEFINE_HEIR_EFFECT_DYN코2=A Noble of the $NAME$ family$SKILLS$$CLAIM$$CULTURE$$RELIGION$ becomes Heir$AGE$.\n
 MIL_UPKEEP_EXPLANATION코0=$CURR$/$ALLOW$ Leaders: $COST$
-MIL_UPKEEP_MOD_DESC코0=We can support $NUM|Y$ leaders (Rulers and their heirs are free), due to:
+ARMY_UPKEEP_MOD_DESC코0=We can support $NUM|Y$ generals and conquistadors (Rulers and their heirs are free), due to:
+NAVY_UPKEEP_MOD_DESC코0=We can support $NUM|Y$ admirals and explorers (Rulers and their heirs are free), due to:
+ARMY_LEADER_LABEL코0=Army: $CURR$/$FREE$$MISSION$
+NAVY_LEADER_LABEL코0=Navy: $CURR$/$FREE$$MISSION$
 inverse_republican_tradition코0=Lack of Republican Tradition
 republican_tradition코0=Republican Tradition
 army_tradition코0=Army Tradition
@@ -1990,6 +1993,8 @@ CV_RESEARCHED_MILTACTICS_TOOLTIP코0=+ Improve Military Tactics by §G+$NUM$§! 
 CV_NOTRESEARCHED_MILTACTICS_TOOLTIP코0=§g- Improve Military Tactics by §G+$NUM$§g (level $LEVEL$)§W
 CV_RESEARCHED_COMBATWIDTH_TOOLTIP코0=+ Improve Combat Width by §G+$NUM$§! (level $LEVEL$)
 CV_NOTRESEARCHED_COMBATWIDTH_TOOLTIP코0=§g- Improve Combat Width by §G+$NUM$§g (level $LEVEL$)§W
+CV_RESEARCHED_ENGAGEMENT_TOOLTIP코0=+ Improve Naval Engagement by §G+$NUM$§! (level $LEVEL$)
+CV_NOTRESEARCHED_ENGAGEMENT_TOOLTIP코0=§g- Improve Naval Engagement by §G+$NUM$§g (level $LEVEL$)§W
 CV_RESEARCHED_MANEUVER_TOOLTIP코0=+ Improve maneuver by §G+$NUM$%§! (level $LEVEL$)
 CV_NOTRESEARCHED_MANEUVER_TOOLTIP코0=§g- Improve maneuver by §G+$NUM$%§g (level $LEVEL$)§W
 CV_RESEARCHED_MANEUVER_TOOLTIP_NEW코0=+ Improve Flanking Range by §G+$NUM$%§! (level $LEVEL$)
@@ -2833,8 +2838,10 @@ IS_ENEMY2코0=as an enemy.
 IS_NOT_ENEMY1코0=Does not view
 IS_NOT_ENEMY2코0=as an enemy.
 TERRAIN_COMBAT_WIDTH코0=Combat Width: $VAL$\n
+ENGAGEMENT_WIDTH코0=Naval Engagement Width
 COMBAT_WIDTH코0=Combat Width
 COMBAT_WIDTH_INCREASE코0=Combat width increased by §G$VALUE$§W.\n
+ENGAGEMENT_WIDTH_INCREASE코0=Naval Engagement increased by §G$VALUE$§W.\n
 MANEUVER_VALUE_INCREASE코0=The maneuver value on your units is increased by §G$VALUE$§W.\n
 THREATS코0=Threats
 RIVALS_NOT_POSSIBLE코0=There are no appropriate nations for $COUNTRY$ to pick as a rival, either due to being too strong or too weak compared to your neighbors.
@@ -2975,6 +2982,7 @@ desc_centralized_colony_rule코0=Our continued insistence to micromanage every c
 noble_influences코0=Noble Influences
 desc_noble_influences코0=The nobility's victory over the regency council has caused a lot of unwanted influence over politics and economy.
 OL_UNIT_HUNTINGREBELS코0=Hunting rebels
+OL_UNIT_CARPET_SIEGE코0=Carpet Sieging
 OL_BUILDING_CONSTRUCTION코0=Building a $BUILDING$ in $PROV$, expecting to be finished at date $DATE$.
 QUEUE_CONTAINS코0=Queue contains
 HAVE_THE_RULER_MODIFIER코0=Have the ruler modifier 
@@ -3611,7 +3619,7 @@ MACRO_HAS_BUILDING코0=§G$BUILDING$ is already built in $PROVINCE$.§!
 MACRO_WRONG_TECH코2=§Y$BUILDING$ requires $TECH$ ($LEVEL$).§!
 MACRO_NEED_BUILDING코0=Need to build $BUILDING_NEEDED|R$ before $BUILDING$ can be built.
 MACRO_ALREADY_HIGHLEVEL코0=$PROVINCE$ already has a special building.
-MACRO_ALREADY_MANUFACTORY코0=$PROVINCE$ already has a manufactory.
+MACRO_ALREADY_MANUFACTORY코1=$PROVINCE$ already has $NUM$ manufactory.
 MACRO_ONCE_IN_COUNTRY코0=$BUILDING$ can only be built once in each country.
 MACRO_REQUIREMENT_NOT_FULFILLED코0=Requirements for $BUILDING$ are not fulfilled for this province.
 MACRO_QUEUE코0=$VAL|Y$ unit(s) are under construction:
@@ -4474,6 +4482,7 @@ DharmaMuslimUnitPackDLC코0=Dharma - Indian Sultanate Pack
 DharmaHinduUnitPackDLC코0=Dharma - Hindu Unit Pack
 GoldenCenturyDLC코0=Golden Century
 EmperorDLC코0=Emperor
+HicSuntDraconesDLC코0=Hic Sunt Dracones
 ME_CATEGORY_DYNASTY코0=Dynasty
 BAD_SERVER_PASSWORD코0=Bad password
 MATCHMAKING_SERVER_FILTER_SEARCH_NAMES코0=Search for names...
@@ -4544,7 +4553,7 @@ POLICY_POSSIBLE코0=When fully unlocked, this idea group gives access to the fol
 NO_POSSIBLE_POLICIES_AT_ALL코0=There are no possible policies to enact right now. You can unlock policies to enact by completing idea groups.
 TRADER_CHANGE코0=Change
 APH_ONLY_EUROPE코0=You can only add provinces on the European Continent
-POWER_INC_TO_HERE코2=This fleet will add §Y$POW$§! trade power to §Y$NODE$§!.\nThis will increase our trade value from §Y$CURRENTINCOME$§!¤ to §Y$INCOME$§!¤ (§Y$INCOMEDIFFERENCE$§!¤ gain), while this fleet costs §R$MAIN$§!¤ in maintenance.\nTotal change will be $PROFIT$¤ $DIR$.\n
+POWER_INC_TO_HERE코4=This fleet will add §Y$POW$§! trade power to §Y$NODE$§!.\nWe estimate this will change our trade value from §Y$CURRENTINCOME$§!¤ to §Y$INCOME$§!¤ (§Y$INCOMEDIFFERENCE$§!¤ $INCOMEDIR$), while this fleet costs §R$MAIN$§!¤ in maintenance.\nTotal change will be an estimated $PROFIT$¤ $DIR$.\n
 DIR_PROF코0=profit
 DIR_LOSS코0=loss
 RESEARCH_WHEN코0=We expect to have enough power to do it at §Y$DATE$§!.
@@ -4718,6 +4727,18 @@ SOH_NONE코0=We currently have no local noble to back as our heir.
 SOH_NOTELECTIVE코0=We are not an elective monarchy
 SOH_LACKPRESTIGE코0=You need at least §Y$VAL$§! prestige to back a local noble as your heir.
 SOH_COST코0=Increase support for $NAME|Y$ by $SUPPORT|Y$ as heir, by spending $COST|R$ prestige.
+#
+IS_CURRYING_FAVORS코0=We are already currying favors with $WHO$.
+IS_NOT_CURRYING_FAVORS코0=But we are not currying favors with $WHO$.
+CURRYFAVORSDESC코0=Curry favours with them will increase our favors over time.
+CANCEL_CURRYFAVORSDESC코0=By no longer attempting to curry favours, we may slowly lose our gains.
+CURRY_FAVORS_DESC코0=Do you wish to send our diplomat to curry favvors with §Y$COUNTRY$§W?\nEach month the diplomat will, depending heavily on our diplomatic reputation, increase the amount of favors they owe us!
+CANCEL_CURRY_FAVORS_DESC코0=Do you wish to recall our diplomat who is currying favors with §Y$COUNTRY$§W?\nWhen he stops working, the favors they owe us may slowly decline.
+CURRYFAVORS코0=Curry Favors
+CURRYFAVORSTITLE코0=Curry Favors
+CANCEL_CURRYFAVORS코0=Cancel Curry Favors
+CANCEL_CURRYFAVORSTITLE코0=Cancel Curry Favors
+#
 danelaw코0=Danelaw
 SHA_IS_WRONG_RELIGION_GROUP코0=$WHO$ is not $RELIGION$.
 dynasty_elected코0=Same Dynasty after Election
@@ -4903,6 +4924,7 @@ PATROL_MISSION_DESC코0=Patrolling $START|Y$ <-> $END|Y$
 PATROL_MISSION_REQUIRES_DESTINATION코0=To start Patrolling, first right-click on a destination at least one sea zone away.
 EVADE_MISSION_REQUIRES_DESTINATION코0=To Evade enemies, first right-click on a destination.
 HUNT_REBELS_MISSION_DESC코0=Suppressing rebels
+CARPET_SIEGE_MISSION_DESC코0=Carpet Sieging
 EXPLORE_LAND_MISSION_DESC코0=Exploring
 DRILL_ARMY_MISSION_DESC코0=Drilling
 UPGRADE_SHIPS코0=§YUpgrade Ships§!
