--- a/en/emperor_mercs_l_english.properties
+++ b/en/emperor_mercs_l_english.properties
@@ -23,7 +23,7 @@ MERCENARY_COMPANY_MANPOWER_INSTANT코1=$COMPANY|Y$ has $MANPOWER|Y$ men in reser
 MERCENARY_COMPANY_MANPOWER_DELAYED코1=Mercenary companies draw from their own manpower pool to reinforce. The amount of manpower available will grow very slowly while they are hired and recovers much faster while not on the field.
 MERCENARY_COMPANY_EFFECTS코0=From the $COMPANY|Y$ traditions:\n
 REINFORCE_MERCENARY_COMPANY_EXTRA코0= and $VALUE$ from the $COMPANY|Y$
-MERC_COMP_MANPOWER_BASE코0=The Maximum Manpower of $MP|Y$ ise due to $VAL|Y$ original regiments.
+MERC_COMP_MANPOWER_BASE코0=The Maximum Manpower of $MP|Y$ is due to $VAL|Y$ original regiments.
 MERC_COMP_MANPOWER_CHANGE코0= Modified by $VAL|+=2%$ due to:\n$WHY$
 BUILD_UNIT_NOT_MERCENARY_COMPANY코0=Mercenary companies cannot recruit more units.
 alert_mercenary_company_low_manpower_instant코1=§YMercenary company is low on manpower§!
