--- a/en/emperor_missions_l_english.properties
+++ b/en/emperor_missions_l_english.properties
@@ -1149,7 +1149,7 @@ emp_ita_alpine_defenses_tooltip코0=§RAs military technology improves, higher l
 emp_ita_prosperity_for_all_tt코0=At least 8 owned provinces must have §Yprosperity§!.
 emp_ita_develop_the_south_tt코0=At least 5 owned provinces in §YSouthern Italy§! must have at least §Y25§! development
 emp_ita_the_gallic_wars_tt코1=Own or have a non-tributary subjuect own at least §Y50§! provinces in the region of §YFrance§!
-emp_ita_redeem_tirolo_tt코0=Own the §YTirol§! area
+emp_ita_redeem_tirolo_tt코1=Own 4 provinces in the §YTirol§! area
 # Venetian missions
 emp_ven_aldine_monopoly_title코0=Aldine Monopoly
 emp_ven_aldine_monopoly_desc코0=The printing press has brought many new innovations to Venice, including the introduction of a slanted, cursive font named after the region it came from, 'Italics', and an early form of copyright protection via granting a monopoly in the production of works written in Greek. These printing innovations are sure to help sprend new ideas throughout the Serene Republic.
