--- a/en/golden_century_l_english.properties
+++ b/en/golden_century_l_english.properties
@@ -322,7 +322,7 @@ CAN_ESTABLISH_ORDER코0=Can establish a Holy Order in $LOCATION|Y$.
 CAN_NOT_ESTABLISH_ORDER코1=Cannot establish a Holy Order in $LOCATION|Y$.
 MODIFIER_CENTER_OF_TRADE_UPGRADE_COST코0=Center of Trade Upgrade Cost
 MODIFIER_MISSIONARY_MAINTENANCE_COST코0=Missionary Maintenance Cost
-MODIFIER_NAVAL_TRADITION_FROM_TRADE코1=Naval Tradition from Protecting Trade
+MODIFIER_NAVAL_TRADITION_FROM_TRADE코2=Navy Tradition from Protecting Trade
 MODIFIER_ADMIRAL_COST코0=Admiral Cost
 MODIFIER_EXPEL_MINORITIES_COST코0=Expel Minorities Cost
 IDEA_MAY_FABRICATE_FOR_VASSALS코1=May Fabricate Claims for Subjects
