--- a/en/government_names_l_english.properties
+++ b/en/government_names_l_english.properties
@@ -209,6 +209,10 @@ GRAND_MASTER코0=Grandmaster
 GRAND_MISTRESS코0=Grandmistress
 SUPREME_GRAND_MASTER코0=Supreme Grandmaster
 SUPREME_GRAND_MISTRESS코0=Supreme Grandmistress
+SISTERHOOD코0=Sisterhood
+GRAND_SISTERHOOD코0=Grand Sisterhood
+ABBESS코0=Abbess
+MOTHER_SUPERIOR코0=Mother Superior
 LANDMEISTER코0=Landmeister
 HOCHMEISTER코0=Hochmeister
 SERENE_DOGE코0=Serene Doge
